[package]
name = "markdown-test-report"
version = "0.2.3"
edition = "2018"
license = "Apache-2.0"

authors = ["Jens Reimann <jreimann@redhat.com>"]
description = "Markdown generator for cargo test JSON files"
repository = "https://github.com/ctron/markdown-test-report"
categories = ["command-line-utilities", "development-tools"]
keywords = ["markdown", "testing"]
readme = "README.md"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.10"
chrono = "0.4"
clap = "2"
git2 = "0.13"