[package]
name = "markdown-test-report"
version = "0.3.7"
edition = "2021"
license = "Apache-2.0"

authors = ["Jens Reimann <jreimann@redhat.com>"]
description = "Markdown generator for cargo test JSON files"
repository = "https://github.com/ctron/markdown-test-report"
categories = ["command-line-utilities", "development-tools"]
keywords = ["markdown", "testing"]
readme = "README.md"

[dependencies]
anyhow = "1"
askama_escape = "0.10"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
git2 = "0.15"
humantime = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"