[package]
name = "markdown-test-report"
version = "0.4.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

authors = ["Jens Reimann <jreimann@redhat.com>"]
description = "Markdown generator for cargo test JSON files"
repository = "https://github.com/ctron/markdown-test-report"
categories = ["command-line-utilities", "development-tools"]
keywords = ["markdown", "testing"]
readme = "README.md"

[dependencies]
anyhow = "1"
askama_escape = "0.13.0"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
git2 = "0.20.2"
humantime = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
